--- a/sample/src/main/res/layout/review_header.xml
+++ b/sample/src/main/res/layout/review_header.xml
@@ -45,6 +45,32 @@
         </LinearLayout>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="11st"
+            android:id="@+id/eleven"/>
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Auction"
+            android:id="@+id/aucion"/>
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Gmarket"
+            android:id="@+id/gmarket"/>
+    </LinearLayout>
+
     <android.support.v7.widget.AppCompatRatingBar
         android:id="@+id/ratingBar"
         android:layout_width="wrap_content"
@@ -54,14 +80,4 @@
         android:isIndicator="true"
         android:theme="@style/RatingBar" />
 
-    <!--Button
-        android:id="@+id/dialogButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginBottom="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/rounded_button"
-        android:text="리뷰 작성"
-        android:textColor="@color/text_white" /-->
 </LinearLayout>
