--- a/sample/src/main/res/layout/fragment_category.xml
+++ b/sample/src/main/res/layout/fragment_category.xml
@@ -2,18 +2,81 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="50dp"
     android:background="@color/text_white"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
+    <!-- All -->
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="50dp"
+        android:id="@+id/allButton"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/category_0"
         android:orientation="vertical">
 
 
+    </LinearLayout>
+
+    <!-- Book -->
+    <LinearLayout
+        android:id="@+id/bookButton"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/category_1"
+        android:orientation="vertical">
+
+    </LinearLayout>
+
+    <!-- Appliances -->
+    <LinearLayout
+        android:id="@+id/appliancesButton"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/category_2"
+        android:orientation="vertical">
+
+    </LinearLayout>
+
+
+    <!-- Beauty -->
+    <LinearLayout
+        android:id="@+id/beautyButton"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/category_3"
+        android:orientation="vertical">
+
+    </LinearLayout>
+
+    <!-- Food -->
+    <LinearLayout
+        android:id="@+id/foodButton"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/category_4"
+        android:orientation="vertical">
+
+    </LinearLayout>
+
+    <!-- Necessaries -->
+    <LinearLayout
+        android:id="@+id/necessariesButton"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/category_5"
+        android:orientation="vertical">
 
     </LinearLayout>
 
