--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/text_white"
+            android:background="@drawable/main_background"
             android:orientation="vertical">
 
             <LinearLayout
@@ -56,136 +56,111 @@
                 android:orientation="vertical"
                 android:weightSum="1">
 
-                <ImageView
-                    android:layout_width="280dp"
-                    android:layout_height="240dp"
-                    android:layout_centerInParent="true"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/ic_zebra_main" />
-
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:id="@+id/loginButton"
+                    android:layout_width="190dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="220dp"
+                    android:background="@color/login_button"
+                    android:elevation="10dp">
 
-                    <LinearLayout
-                        android:id="@+id/loginButton"
-                        android:layout_width="150dp"
-                        android:layout_height="110dp"
-                        android:background="@color/login_button"
-                        android:elevation="10dp"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:layout_width="60dp"
-                            android:layout_height="60dp"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="5dp"
-                            android:src="@drawable/ic_login" />
-
-                        <TextView
-                            android:id="@+id/myText"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="5dp"
-                            android:text="Login"
-                            android:textColor="@color/text_white"
-                            android:textSize="18dp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/barcodeButton"
-                        android:layout_width="150dp"
-                        android:layout_height="110dp"
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
                         android:layout_marginLeft="10dp"
-                        android:background="@color/barcode_button"
-                        android:elevation="10dp"
-                        android:orientation="vertical">
+                        android:layout_marginRight="10dp"
+                        android:src="@drawable/ic_login" />
 
-                        <ImageView
-                            android:layout_width="60dp"
-                            android:layout_height="60dp"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="5dp"
-                            android:src="@drawable/ic_barcode" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="5dp"
-                            android:text="Barcode Scan"
-                            android:textColor="@color/text_white"
-                            android:textSize="18dp" />
-
-                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/myText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Login"
+                        android:textColor="@color/text_white"
+                        android:textSize="20dp" />
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/barcodeButton"
+                    android:layout_width="190dp"
+                    android:layout_height="50dp"
                     android:layout_marginTop="10dp"
-                    android:orientation="horizontal">
+                    android:background="@color/barcode_button"
+                    android:elevation="10dp">
 
-                    <LinearLayout
-                        android:id="@+id/categoryButton"
-                        android:layout_width="150dp"
-                        android:layout_height="110dp"
-
-                        android:background="@color/category_button"
-                        android:elevation="10dp"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:layout_width="60dp"
-                            android:layout_height="60dp"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="5dp"
-                            android:src="@drawable/ic_category" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="5dp"
-                            android:text="Category"
-                            android:textColor="@color/text_white"
-                            android:textSize="18dp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/searchButton"
-                        android:layout_width="150dp"
-                        android:layout_height="110dp"
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
                         android:layout_marginLeft="10dp"
-                        android:background="@color/login_button"
-                        android:elevation="10dp"
-                        android:orientation="vertical">
+                        android:layout_marginRight="10dp"
+                        android:src="@drawable/ic_barcode" />
 
-                        <ImageView
-                            android:layout_width="60dp"
-                            android:layout_height="60dp"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="5dp"
-                            android:src="@drawable/ic_searche_white" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="5dp"
-                            android:text="Search"
-                            android:textColor="@color/text_white"
-                            android:textSize="18dp" />
-
-                    </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Barcode Scan"
+                        android:textColor="@color/text_white"
+                        android:textSize="18dp" />
 
                 </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/categoryButton"
+                    android:layout_width="190dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/category_button"
+                    android:elevation="10dp">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:src="@drawable/ic_category" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Category"
+                        android:textColor="@color/text_white"
+                        android:textSize="20dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/searchButton"
+                    android:layout_width="190dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/login_button"
+                    android:elevation="10dp">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:src="@drawable/ic_searche_white" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Search"
+                        android:textColor="@color/text_white"
+                        android:textSize="18dp" />
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
