--- a/sample/src/main/res/layout/activity_register.xml
+++ b/sample/src/main/res/layout/activity_register.xml
@@ -122,7 +122,7 @@
                             android:layout_width="130dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
-                            android:background="@drawable/rounded_button"
+                            android:background="@drawable/rounded_cancel_button"
                             android:text="취소"
                             android:textColor="#FFFFFF"
                             android:textSize="20dp" />
