--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -2,8 +2,10 @@
 <resources>
     <color name="colorBackground">#D5D5D5</color>
     <!-- for toolbar -->
-    <color name="primary">#2f72f7
+    <color name="primary">#849E54
     </color>
+    <color name="less_primary">#cbd7b4</color>
+    <color name="gray">#bebebe</color>
     <color name="primaryDark">#0B5AF8</color>
     <color name="ripple">#80A4FF</color>
     <color name="accent">#65a2f7</color>
@@ -11,16 +13,17 @@
 
     <!--for ratingbar-->
     <color name="ratinBar">#ffd700</color>
+
     <!--for custom imageview-->
-    <color name="image_boder_red">#2f72f7</color>
+    <color name="image_boder_red">#849E54</color>
     <color name="image_boder_black">#4C4C4C</color>
     <color name="image_boder_white">#FFFFFF</color>
     <color name="text_white">#FFFFFF</color>
 
     <!--for main button-->
-    <color name="login_button">#2f72f7</color>
-    <color name="barcode_button">#65a2f7</color>
-    <color name="category_button">#65a2f7</color>
-    <color name="search_button">#2f72f7</color>
+    <color name="login_button">#849E54</color>
+    <color name="barcode_button">#849E54</color>
+    <color name="category_button">#849E54</color>
+    <color name="search_button">#849E54</color>
 
 </resources>
