--- a/sample/src/main/res/layout/fragment_category.xml
+++ b/sample/src/main/res/layout/fragment_category.xml
@@ -2,14 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="50dp"
+    android:paddingTop="50dp"
+    android:paddingLeft="30dp"
+    android:paddingRight="30dp"
     android:background="@color/text_white"
     android:orientation="vertical">
 
     <!-- All -->
     <LinearLayout
         android:id="@+id/allButton"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
